--- a/main.html
+++ b/main.html
@@ -23,11 +23,41 @@
                     main title. it's a smaller font and the color is lower
                     contrast.
                 </p>
-                <button>Sign up</button>
+                <button class="btn">Sign up</button>
             </div>
             <div class="right-hero">This a place holder for image</div>
         </div>
-        <div class="middle1">middle section</div>
+        <div class="middle1">
+            <p class="middle-title">
+                Some random information.
+            </p>
+            <div class="frame-container">
+                <div class="frame">
+                    <div class="frame-item"></div>
+                    <p class="frame-text">
+                        this is some subtext under an illustration or image
+                    </p>
+                </div>
+                <div class="frame">
+                    <div class="frame-item"></div>
+                    <p class="frame-text">
+                        this is some subtext under an illustration or image
+                    </p>
+                </div>
+                <div class="frame">
+                    <div class="frame-item"></div>
+                    <p class="frame-text">
+                        this is some subtext under an illustration or image
+                    </p>
+                </div>
+                <div class="frame">
+                    <div class="frame-item"></div>
+                    <p class="frame-text">
+                        this is some subtext under an illustration or image
+                    </p>
+                </div>
+            </div>
+        </div>
         <div class="middle2">another middle</div>
         <div class="middle3">Last middle</div>
         <div class="footer">Footer</div>
