Put informations in the middle

--- a/main.html
+++ b/main.html
@@ -58,7 +58,17 @@
                 </div>
             </div>
         </div>
-        <div class="middle2">another middle</div>
+        <div class="middle2">
+            <span class="text-box">
+                <p class="text-container">
+                    This is a inspiring quote, or a testimonial form a customer. Maybe it's just a filling up space,
+                    or maybe people will actually read it. Who knows? All i know is it looks nice.
+                </p>
+                <p class="author">
+                    -Thor, a God of Thunder
+                </p>
+            </span>
+        </div>
         <div class="middle3">Last middle</div>
         <div class="footer">Footer</div>
     </div>
