Make a contact box for sign up

--- a/main.html
+++ b/main.html
@@ -69,8 +69,20 @@
                 </p>
             </span>
         </div>
-        <div class="middle3">Last middle</div>
-        <div class="footer">Footer</div>
+        <div class="middle3">
+            <div class="contact-box">
+                <span class="contact">
+                    <p class="contact-title">
+                        Call to actions!It's time!
+                    </p>
+                    <p>
+                        Sign up for our product by clicking that button right over there
+                    </p>
+                </span>
+                <button class="contact-btn">Sign up</button>
+            </div>
+        </div>
+        <div class="footer">Copy right @ The Odin Project 2021</div>
     </div>
 </body>
 </html>
